--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,23 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.flywaydb</groupId>
+        <artifactId>flyway-maven-plugin</artifactId>
+        <version>7.14.0</version>
+        <configuration>
+          <url>jdbc:h2:file:./tmp/news-db</url>
+          <user>root</user>
+          <password>123456</password>
+        </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.199</version>
+          </dependency>
+        </dependencies>
+      </plugin>
     </plugins>
   </build>
 </project>
