--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
       <artifactId>mybatis</artifactId>
       <version>3.5.7</version>
     </dependency>
+    <dependency>
+      <groupId>org.elasticsearch.client</groupId>
+      <artifactId>elasticsearch-rest-high-level-client</artifactId>
+      <version>7.14.1</version>
+    </dependency>
   </dependencies>
 
   <build>
